--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
-    <string name="app_name">BluetoothDeviceApp</string>
+    <string name="app_name">BTTest</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_select_device">SelectDeviceActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_control">ControlActivity</string>
+    <string name="disconnect">disconnect</string>
+    <string name="off">off</string>
+    <string name="on">on</string>
+    <string name="refresh">Refresh devices</string>
 </resources>
